# CppTemplate

./: .gitignore  CMakeLists.txt  LICENSE  version.h.in
cmake/: options.cmake
include/cpp_template/: hello.h
source/: hello.cc
test/: CMakeLists.txt  hello_test.cc  unit_test.cc
